-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 4.2.0, Qt Creator 4.2.1, Qt Creator 4.3.0
-
OSX 10.11
Preconditions:
- Clang model is enabled.
- New signal-slot connection is used.
Autocomplete not only completes the signal/slot name but also adds "()" when the suggested signal/slot is accepted in the pop-up with Enter key.
See the attached screenshots for completion suggestion and wrongly added parentheses after accepting the suggested function. (In "autocomplete_suggestion.png" deleteLater is already inserted by the code model before accepting the suggestion because it was the only possibility based on the prefix.)
- relates to
-
QTCREATORBUG-13558 autocomplete signal / slot does not work for connect Qt5 style
-
- Closed
-