Clang: Fix slots and function pointers completion

Check completed functions for preceding & and
don't add parantheses in that case

Task-number: QTCREATORBUG-17578
Change-Id: I21b1e2c9ffb9d288f3267146e9afd575e6fef30b
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>